--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ output-*/
 
 ### Terraform ###
 # Local .terraform directories
-**/.terraform/*
+# **/.terraform/*
 
 # .tfstate files
 **/**/*.tfstate
