--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -58,7 +58,7 @@ jobs:
           uses: docker/build-push-action@v3
           with:
               context: .
-              file: /Dockerfiles/Workstation/Dockerfile
+              file: ./Dockerfiles/Workstation/Dockerfile
               platforms: linux/amd64,linux/arm64
               push: true
               tags: ${{ steps.meta.outputs.tags }}
