--- a/Dockerfiles/Workstation/Dockerfile
+++ b/Dockerfiles/Workstation/Dockerfile
@@ -1,6 +1,6 @@
 FROM ubuntu:22.04
 
 WORKDIR /Dev
-COPY ./Dockerfiles/Workstation/init.sh /app
-RUN bash -c "/app/init.sh"
+COPY ./Dockerfiles/Workstation/init.sh /Dev
+RUN bash /Dev/init.sh
 RUN useradd -s usr/bin/zsh admin
