--- a/Dockerfiles/Workstation/Dockerfile
+++ b/Dockerfiles/Workstation/Dockerfile
@@ -3,4 +3,4 @@ FROM ubuntu:22.04
 WORKDIR /Dev
 COPY ./Dockerfiles/Workstation/init.sh /Dev
 RUN bash /Dev/init.sh
-RUN useradd -s usr/bin/zsh admin
+#RUN useradd -s usr/bin/zsh admin
